# tarug

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  meson.build  task.txt
.github/workflows/: flatpak.yml
data/: io.github.ppvan.tarug.desktop.in  io.github.ppvan.tarug.gschema.xml  io.github.ppvan.tarug.metainfo.xml.in  me.ppvan.psequel.metainfo.xml.in  meson.build
data/icons/: meson.build
pkgs/flatpak/: io.github.ppvan.tarug.yml  me.ppvan.psequel.yml
po/: POTFILES  meson.build
resources/: meson.build  psequel.gresource.xml.in  tarug.gresource.xml.in
resources/gtk/: backup-dialog.blp  connection-listitem.blp  connection-row.blp  connection-view.blp  datacell.blp  edit-row.blp  preferences-window.blp  query-editor.blp  query-listitem.blp  query-results.blp  restore-dialog.blp  schema-view.blp  style-switcher.blp  table-cols.blp  table-data-view.blp  table-fk.blp  table-graph.blp  table-index.blp  table-listitem.blp  table-row.blp  table-structure-view.blp  view-data-view.blp  view-listitem.blp  view-structure-view.blp  where-entry.blp  window.blp
scripts/: blueprint-compiler  meson  vala-language-server
src/: application.vala  cmd.vala  meson.build
src/models/: Connection.vala  Query.vala  Relation.vala  Schema.vala  Table.vala
src/repositories/: ConnectionRepository.vala  QueryRepository.vala  SchemaRepository.vala
src/services/: BackupService.vala  ConnectionService.vala  Container.vala  ExportService.vala  MigrationService.vala  NavigationService.vala  ResourceManager.vala  (+6 more)
tests/: meson.build  sql_connect_test.vala  test_runtime.vala
(+40 files in other folders)
